--- a/package.json
+++ b/package.json
@@ -1,39 +1,53 @@
 {
+  "private": true,
+  "sideEffects": false,
   "type": "module",
-  "name": "lang",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "Samuel Jensen",
+  "license": "MIT",
+  "imports": {
+    "#app/*": "./app/*"
+  },
   "scripts": {
     "dev": "node ./server.js",
     "build": "remix vite:build",
     "start": "cross-env NODE_ENV=production node ./server.js",
+    "lint": "eslint .",
+    "format": "prettier . --write",
     "typecheck": "tsc"
   },
-  "keywords": [],
-  "author": "Samuel Jensen",
-  "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "0.21.0",
     "@react-router/remix-config-routes-adapter": "0.0.0-nightly-bf7ecb711-20240911",
     "@remix-run/express": "2.15.1",
     "@remix-run/node": "2.15.1",
     "@remix-run/react": "2.15.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "cross-env": "7.0.3",
     "dotenv": "16.4.7",
     "express": "4.21.2",
     "isbot": "4",
+    "lucide-react": "0.468.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "remix-flat-routes": "0.6.5"
+    "remix-flat-routes": "0.6.5",
+    "tailwind-merge": "2.5.5",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@epic-web/config": "1.16.4",
     "@remix-run/dev": "2.15.1",
     "@types/express": "5.0.0",
     "@types/node": "22.10.1",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.16.0",
+    "postcss": "8.4.49",
+    "prettier": "3.4.2",
+    "tailwindcss": "3.4.16",
     "typescript": "5.7.2",
     "vite": "6.0.3"
-  }
+  },
+  "prettier": "@epic-web/config/prettier"
 }
