--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "0.21.0",
+    "@radix-ui/react-dialog": "1.1.3",
+    "@radix-ui/react-navigation-menu": "1.2.2",
+    "@radix-ui/react-slot": "1.1.1",
     "@react-router/remix-config-routes-adapter": "0.0.0-nightly-bf7ecb711-20240911",
     "@remix-run/express": "2.15.1",
     "@remix-run/node": "2.15.1",
@@ -32,7 +35,8 @@
     "react-dom": "19.0.0",
     "remix-flat-routes": "0.6.5",
     "tailwind-merge": "2.5.5",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "vaul": "1.1.2"
   },
   "devDependencies": {
     "@epic-web/config": "1.16.4",
