--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@conform-to/react": "1.2.2",
+    "@conform-to/zod": "1.2.2",
     "@google/generative-ai": "0.21.0",
     "@radix-ui/react-dialog": "1.1.3",
     "@radix-ui/react-navigation-menu": "1.2.2",
+    "@radix-ui/react-scroll-area": "1.2.2",
     "@radix-ui/react-slot": "1.1.1",
     "@react-router/remix-config-routes-adapter": "0.0.0-nightly-bf7ecb711-20240911",
     "@remix-run/express": "2.15.1",
     "@remix-run/node": "2.15.1",
     "@remix-run/react": "2.15.1",
+    "@types/morgan": "1.9.9",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cross-env": "7.0.3",
@@ -31,12 +35,14 @@
     "express": "4.21.2",
     "isbot": "4",
     "lucide-react": "0.468.0",
+    "morgan": "1.10.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remix-flat-routes": "0.6.5",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@epic-web/config": "1.16.4",
