--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "@remix-run/node": "2.15.1",
     "@remix-run/react": "2.15.1",
     "@types/morgan": "1.9.9",
+    "address": "2.0.3",
+    "chalk": "5.4.0",
     "class-variance-authority": "0.7.1",
+    "close-with-grace": "2.1.0",
     "clsx": "2.1.1",
     "cross-env": "7.0.3",
     "dotenv": "16.4.7",
     "express": "4.21.2",
+    "get-port": "7.1.0",
     "isbot": "4",
     "lucide-react": "0.468.0",
     "morgan": "1.10.0",
