--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@conform-to/react": "1.2.2",
     "@conform-to/zod": "1.2.2",
-    "@google/generative-ai": "0.21.0",
     "@radix-ui/react-dialog": "1.1.3",
     "@radix-ui/react-navigation-menu": "1.2.2",
     "@radix-ui/react-scroll-area": "1.2.2",
@@ -35,6 +34,7 @@
     "close-with-grace": "2.1.0",
     "clsx": "2.1.1",
     "cross-env": "7.0.3",
+    "deepl-node": "1.15.0",
     "dotenv": "16.4.7",
     "express": "4.21.2",
     "get-port": "7.1.0",
