--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/express": "2.15.1",
     "@remix-run/node": "2.15.1",
     "@remix-run/react": "2.15.1",
+    "@tailwindcss/typography": "0.5.15",
     "@types/morgan": "1.9.9",
     "address": "2.0.3",
     "chalk": "5.4.0",
