--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
-  "name": "wtf",
+  "name": "polyglotize",
   "author": "Samuel Jensen",
   "license": "MIT",
   "imports": {
