--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
+# generate with `openssl rand -hex 32`
+SESSION_SECRET=SESSION_SECRET
+
+# DeepL > Account > API Keys > Create key
+# https://www.deepl.com/en/your-account/keys
 DEEPL_KEY=MOCK_DEEPL_KEY
