--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "dependencies": {
     "@conform-to/react": "1.2.2",
     "@conform-to/zod": "1.2.2",
-    "@radix-ui/react-dialog": "1.1.3",
-    "@radix-ui/react-navigation-menu": "1.2.2",
+    "@radix-ui/react-collapsible": "1.1.2",
+    "@radix-ui/react-dialog": "1.1.4",
+    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-navigation-menu": "1.2.3",
+    "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/react-scroll-area": "1.2.2",
+    "@radix-ui/react-select": "2.1.4",
     "@radix-ui/react-slot": "1.1.1",
     "@react-router/remix-config-routes-adapter": "0.0.0-nightly-bf7ecb711-20240911",
     "@remix-run/express": "2.15.1",
@@ -38,17 +42,19 @@
     "class-variance-authority": "0.7.1",
     "close-with-grace": "2.1.0",
     "clsx": "2.1.1",
+    "cmdk": "1.0.4",
     "cross-env": "7.0.3",
     "deepl-node": "1.15.0",
     "dotenv": "16.4.7",
     "express": "4.21.2",
     "get-port": "7.1.0",
     "isbot": "4",
-    "lucide-react": "0.468.0",
+    "lucide-react": "0.469.0",
     "morgan": "1.10.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remix-flat-routes": "0.6.5",
+    "remix-utils": "7.7.0",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
     "vaul": "1.1.2",
