--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SESSION_SECRET=SESSION_SECRET
 # DeepL > Account > API Keys > Create key
 # https://www.deepl.com/en/your-account/keys
 DEEPL_KEY=MOCK_DEEPL_KEY
+
+# https://elevenlabs.io/app/settings/api-keys
+ELEVENLABS_API_KEY=ELEVENLABS_API_KEY
